# brainclaw

./: .gitignore  BENCHMARK.md  HANDOFF.md  README.md  benchmark_results.json  openclaw.plugin.json  package-lock.json  package.json  requirements.txt
python/: pyproject.toml
python/openclaw_memory/: bridge_entrypoints.py  config.py
python/openclaw_memory/audit/: __init__.py  audit_log.py
python/openclaw_memory/embeddings/: __init__.py
python/openclaw_memory/graph/: __init__.py  communities.py  health.py  summarize.py
python/openclaw_memory/integration/: __init__.py  artifact_validation.py  lcm_migration.py  lossless_adapter.py  lossless_sync.py  memory_backup.py  openclaw_client.py  operational_memory_sync.py  operations.py  promotion_override.py  session_context.py  source_adapter.py  sync_error_handling.py
python/openclaw_memory/learning/: __init__.py  active_learning.py  auto_summarize.py  distiller.py
python/openclaw_memory/memory/: __init__.py  classes.py  lifecycle.py  write_policy.py
python/openclaw_memory/migration/: __init__.py  lcm_export.py  orchestrator.py
python/openclaw_memory/observability/: __init__.py  alerts.yaml  grafana_dashboard.json  init.py  lcm_metrics.py  logging.py  metrics.py  prometheus_exporter.py  telemetry.py
python/openclaw_memory/openclaw_memory/: learning  retrieval
python/openclaw_memory/openclaw_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/openclaw_memory/pipeline/: __init__.py  chunking.py  enhancement.py  extraction.py  ingestion.py  llm_extraction.py  maintenance.py  redaction.py  sync.py
python/openclaw_memory/retrieval/: __init__.py  drill_down.py  fusion.py  intent.py  policy.py  rrf_fusion.py
python/openclaw_memory/security/: access_control.py  team_lookup.py
python/openclaw_memory/storage/: __init__.py  neo4j_client.py  postgres.py  weaviate_client.py
python/openclaw_memory/testing/: __init__.py  synthetic_data.py  (+1 more)
python/tests/: test_brainclaw_core.py  test_lossless_claw_bridge.py  test_lossless_claw_contract.py  test_lossless_claw_sync.py  test_memory_contract.py  test_operational_memory_sync.py
(+83 files in other folders)
